Fixed horizontal scroll on scaling

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,21 +1,10 @@
 $primary-color: #4cc9f0;
-$white-color: white;
-$gray-color: gray;
-$light-white-color: rgba($color: $white-color, $alpha: 0.5);
-
-@mixin primary-color {
-  color: $white-color;
-}
-
-@mixin white-color {
-  color: $white-color;
-}
 
 @mixin border-radius-10 {
   border-radius: 10px;
 }
 
-body {
+html, body {
   overflow-x: hidden;
 }
 
@@ -27,7 +16,7 @@ body {
 ::-webkit-scrollbar-track {
   @include border-radius-10;
 
-  box-shadow: inset 0 0 5px $gray-color;
+  box-shadow: inset 0 0 5px gray;
 }
 ::-webkit-scrollbar-thumb {
   @include border-radius-10;
@@ -77,28 +66,10 @@ body {
   text-align: center;
 }
 
-.overflow-x-hidden {
-  overflow-x: hidden;
-}
-
 .max-width {
   max-width: 2640px;
 }
 
 .white-color {
-  @include white-color;
-}
-
-.circular-icon {
-  @include white-color;
-
-  border: 2px solid $white-color;
-  width: 25px;
-  border-radius: 50%;
-  padding: 7px;
-  margin: 5px;
-
-  &:hover {
-    color: $light-white-color;
-  }
+  color: white;
 }
